modified:   _config.butterfly.yml 	modified:   _config.yml 	new file:   source/_posts/bt.md 	modified:   source/_posts/cf.md 	modified:   source/_posts/warp.md 	modified:   "source/_posts/\345\260\206Hexo\345\215\232\345\256\242\351\203\250\347\275\262\345\210\260Cloudflare\345\271\266\350\256\276\347\275\256\350\207\252\345\256\232\344\271\211\345\237\237.md" 	modified:   "source/_posts/\345\270\214\346\234\233.md" 	modified:   "source/_posts/\345\274\240\345\260\217\351\276\231.md" 	modified:   "source/_posts/\346\217\220\351\227\256\347\232\204\346\231\272\346\205\247.md" 	modified:   "source/_posts/\346\227\240\351\242\230.md" 	modified:   "source/_posts/\346\237\245\346\260\264\350\241\250\346\214\207\345\215\227.md" 	deleted:    "source/_posts/\350\277\201\347\247\273.md" 	modified:   "source/_posts/\351\246\231\350\222\262.md" 	new file:   source/img/63788867_p0.jpg 	new file:   source/img/93615741_p0.jpg 	new file:   source/img/99230581_p0.jpg

--- a/source/_posts/提问的智慧.md
+++ b/source/_posts/提问的智慧.md
@@ -2,8 +2,7 @@
 title: 提问的智慧
 date: 2022-08-03 01:30:22
 author: 
-top_img: 
-cover: 
+cover: /img/93615741_p0.jpg
 categories: # 分类
 - 深度好文
 copyright: false
