modified:   _config.butterfly.yml 	modified:   _config.yml 	modified:   package-lock.json 	modified:   package.json 	modified:   source/_posts/bt.md 	modified:   source/_posts/cf.md 	new file:   source/_posts/dns.md 	modified:   source/_posts/warp.md 	modified:   "source/_posts/\345\260\206Hexo\345\215\232\345\256\242\351\203\250\347\275\262\345\210\260Cloudflare\345\271\266\350\256\276\347\275\256\350\207\252\345\256\232\344\271\211\345\237\237.md" 	modified:   "source/_posts/\345\270\214\346\234\233.md" 	modified:   "source/_posts/\345\274\240\345\260\217\351\276\231.md" 	modified:   "source/_posts/\346\217\220\351\227\256\347\232\204\346\231\272\346\205\247.md" 	modified:   "source/_posts/\346\227\240\351\242\230.md" 	modified:   "source/_posts/\346\237\245\346\260\264\350\241\250\346\214\207\345\215\227.md" 	modified:   "source/_posts/\351\246\231\350\222\262.md" 	modified:   source/img/74431885.webp 	new file:   source/img/75659726.webp 	deleted:    source/img/bg.png 	new file:   source/img/bg.webp 	modified:   themes/butterfly (modified content, untracked content)

--- a/source/_posts/希望.md
+++ b/source/_posts/希望.md
@@ -1,17 +1,18 @@
 ---
 title: 希望
-date: 
-updata: 
 author: 祈光
 cover: /img/hope.jpg
-categories: # 分类
-- 小说
-tags: # 标签
-- 科幻
-copyright_author: 祈光 #作者
-copyright_author_href: https://space.bilibili.com/1056756138/ #作者链接
-copyright_url:  #文章链接
-copyright_info: 此文章版权归祈光所有，如有转载，请註明来自原作者 #版权信息
+categories:
+  - 小说
+tags:
+  - 科幻
+copyright_author: 祈光
+copyright_author_href: 'https://space.bilibili.com/1056756138/'
+copyright_info: 此文章版权归祈光所有，如有转载，请註明来自原作者
+abbrlink: 6735420c
+date:
+updata:
+copyright_url:
 ---
 
 **另界31年[^1]，联合新闻[^2]**  
