--- a/source/_posts/张小龙.md
+++ b/source/_posts/张小龙.md
@@ -2,14 +2,15 @@
 aplayer: true
 copyright: false
 title: 张小龙与他的微信
-date: 
-author: 
-cover: https://s2.loli.net/2022/07/24/sgG61ywBjfIOl5F.png
-categories: # 分类
-- 互联网
-tags: # 标签
-- 微信
-- 腾讯
+cover: 'https://s2.loli.net/2022/07/24/sgG61ywBjfIOl5F.png'
+categories:
+  - 互联网
+tags:
+  - 微信
+  - 腾讯
+abbrlink: 19bb494d
+date:
+author:
 ---
 {% meting "288838" "netease" "song" "autoplay" "theme:#555" "preload:auto" %}
 
