--- a/source/_posts/香蒲.md
+++ b/source/_posts/香蒲.md
@@ -1,16 +1,17 @@
 ---
 title: 香蒲
-date: 
 author: Hanson
-cover: https://s2.loli.net/2022/07/25/X6pZKOAsfTEVCoe.png
-categories: # 分类
-- 小说
-tags: # 标签
-- 科幻
-copyright_author: Hanson #作者
-copyright_author_href: https://space.bilibili.com/483946423/ #作者链接
-copyright_url:  #文章链接
-copyright_info: 此文章版权归Hanson所有，如有转载，请註明来自原作者 #版权信息
+cover: 'https://s2.loli.net/2022/07/25/X6pZKOAsfTEVCoe.png'
+categories:
+  - 小说
+tags:
+  - 科幻
+copyright_author: Hanson
+copyright_author_href: 'https://space.bilibili.com/483946423/'
+copyright_info: 此文章版权归Hanson所有，如有转载，请註明来自原作者
+abbrlink: 7e4f94d1
+date:
+copyright_url:
 ---
 
 “詹局，这是上两个小时的观测报告“一阵嘹亮粗壮的嗓音随着关门声袭进詹开寅的耳中，从门外贸然进入的是一副年轻气盛的面孔，可这似乎并没有影响他的神情，能把普通人吓一跳的巨大音量在他面见仿佛与窗外的风景并无二至，任凭它淡然飘过耳边。
