modified:   _config.butterfly.yml 	modified:   _config.yml 	new file:   source/_posts/fanqiang.md 	modified:   "source/_posts/\346\237\245\346\260\264\350\241\250\346\214\207\345\215\227.md" 	modified:   source/about/index.md 	new file:   source/img/fq.webp 	new file:   source/img/fq1.webp 	new file:   source/img/fq10.webp 	new file:   source/img/fq11.webp 	new file:   source/img/fq12.webp 	new file:   source/img/fq13.webp 	new file:   source/img/fq14.png 	new file:   source/img/fq15.webp 	new file:   source/img/fq2.webp 	new file:   source/img/fq3.webp 	new file:   source/img/fq4.webp 	new file:   source/img/fq5.webp 	new file:   source/img/fq6.webp 	new file:   source/img/fq7.webp 	new file:   source/img/fq8.webp 	new file:   source/img/fq9.webp 	new file:   source/img/fq_bg.webp

--- a/source/_posts/查水表指南.md
+++ b/source/_posts/查水表指南.md
@@ -16,10 +16,7 @@ toc_number:
 toc_style_simple:
 aplayer:
 ---
-
-{% note blue no-icon %}
-**转载自https://web.archive.org/web/20140306042349/www.guokr.com/post/565846/**
-{% endnote %}
+>**转载自 https://web.archive.org/web/20140306042349/www.guokr.com/post/565846/**
     
 我们来假设一个案例，在一个月黑风高的晚上，小明在某论坛大肆批评政府，第二天小明刚一睡醒就听见咚咚咚，开门查水表，于是乎小明神秘消失了。
 
